# opgg-ads-remover

./: .gitignore  README.md  TERMS_OF_SERVICE.md  index.js  package.json  rollup.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
old/: .eslintrc.yml  README.md  index.js  package.json
src/: App.css  App.jsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: asar.rs  main.rs  patcher.rs
